--- a/index.html
+++ b/index.html
@@ -9,21 +9,21 @@
       href="https://fonts.googleapis.com/css2?family=Quicksand:wght@300..700&display=swap"
       rel="stylesheet" />
     <link rel="stylesheet" href="style.css" />
-    <title>Do you love me? | @coding.stella</title>
+    <title>Me amas ?</title>
 </head>
 <body>
 
 <div class="question-container container">
 <video class="local-gif" src="Reply me love.mp4" autoplay muted loop></video>
-  <h2 class="question">Do you love me?</h2>
+  <h2 class="question">Amore mio, tu me amas ??</h2>
   <div class="button-container">
-    <button class="yes-btn btn js-yes-btn">Yes</button>
+    <button class="yes-btn btn js-yes-btn">Si mi amor</button>
     <button class="no-btn btn js-no-btn">No</button>
   </div>
 </div>
 <div class="result-container container">
   <video class="gif-result" src="Love me.mp4" autoplay loop></video>
-  <h2>I knew it😍!</h2>
+  <h2>Ayyy lo sabíaaaa 😍!</h2>
 </div>
 
 <div class="cssload-main">
@@ -37,4 +37,5 @@
 <script src="script.js"></script>
 
 </body>
+
 </html>
